tests/interpreter/assert-statement-fails.stderr
error: assertion failed
 --> $DIR/assert-statement-fails.lox:1:1
  |
1 | assert false;
  | ^^^^^^^^^^^^^
